#  LAMMPS potential table generator by Vasilii Maksimov
#  Repository: https://github.com/superde1fin/trajan
#  License: GNU GPLv3
###############################################################################

[build-system]
requires      = ["hatchling>=1.17.1"]
build-backend = "hatchling.build"

###############################################################################
#  Core metadata
###############################################################################
[project]
name            = "lammps-trajan"
version         = "0.0.0"
description     = "LAMMPS trajectory file analysis utility"
readme          = "README.md"
requires-python = ">=3.6"
license         = { text = "GPL-3.0-only" }

###############################################################################
#  Runtime dependencies
###############################################################################
dependencies = [
  "numpy>=1.21.6",
  "scipy>=1.7.3",
  "importlib-metadata<6.7.0; python_version < '3.8'",
]



[tool.hatch.build.targets.wheel]
packages = ["src/trajan"]


authors = [
  { name = "Vasilii Maksimov", email = "VasiliiMaksimov@my.unt.edu" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]


###############################################################################
#  Optional extras for development and publishing
###############################################################################
[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "mypy>=1.10",
  "ruff>=0.4",
  "build>=1.2",
  "twine>=5.0",
]

###############################################################################
#  Command-line interface
###############################################################################
[project.scripts]
trajan = "trajan.cli:main"

###############################################################################
#  Project URLs (PyPI sidebar links)
###############################################################################
[project.urls]
Homepage   = "https://github.com/superde1fin/trajan"
Source     = "https://github.com/superde1fin/trajan"
Issues     = "https://github.com/superde1fin/trajan/issues"
